--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -13,6 +13,18 @@ header {
     font-size: 35px;
 }
 
+/* DARK THEME */
+
+body {
+    background-color: white;
+}
+
+/* LIGHT THEME */
+
+body.dark-theme {
+    background-color: black;
+}
+
 .navbar {
     border: 2px solid bisque;
     justify-content: center;
