--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4,14 +4,22 @@
 }
 
 header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
     border: 4px solid rgb(0, 0, 179);
     border-radius: 8px;
     padding: 15px;
-    margin: 2px;
+    margin: auto;
     color: bisque;
     font-size: 35px;
 }
+
+span {
+    margin: 20px;
+}
+
 
 .navbar {
     border: 2px solid bisque;
@@ -49,6 +57,9 @@ a:hover {
     color: rgb(125, 1, 1);
     border: 2px solid bisque;
     margin: 2px;
+    padding: 5px;
+    width: 100px;
+    height: fit-content;
 }
 
 #center {
