--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -3,12 +3,19 @@
     margin: 0;
 }
 
+:root {
+    --bluetxt: rgb(55, 0, 166);
+    --red: rgb(125, 1, 1);
+    --bordercolor: rgb(0, 0, 179);
+
+}
+
 header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    border: 4px solid rgb(0, 0, 179);
+    border: 4px solid var(--bordercolor);
     border-radius: 8px;
     padding: 15px;
     margin: auto;
@@ -44,11 +51,12 @@ span {
     margin: auto;
     text-decoration: overline;
     font-size: 25px;
-    color: rgb(55, 0, 166);
+    color: var(--bluetxt);
 }
 
+
 a:hover {
-    color: rgb(125, 1, 1);
+    color: var(--linkHover);
 }
 
 .flex-main {
@@ -60,12 +68,12 @@ a:hover {
 }
 
 #G {
-    color: rgb(55, 0, 166);
+    color: var(--bluetxt);
 
 }
 
 #and {
-    color: rgb(125, 1, 1);
+    color: var(--red);
     border: 2px solid bisque;
     margin: 2px;
     padding: 5px;
@@ -74,7 +82,9 @@ a:hover {
 }
 
 #center {
-    border: 5px solid rgb(125, 1, 1);
+    display: flex;
+    flex-direction: column;
+    border: 5px solid var(--red);
     text-align: center;
     width: 50%;
     padding: 15px;
@@ -88,6 +98,7 @@ a:hover {
 }
 
 .about-page p {
+    flex-wrap: wrap;
     padding: 10px;
     color: bisque;
 
@@ -96,11 +107,24 @@ a:hover {
 .img {
     height: 500px;
     width: auto;
-    border: 2px solid rgb(0, 0, 179);
+    border: 2px solid var(--bordercolor);
     padding: 5px;
     border-radius: 5px;
 }
 
 .img:hover {
     transform: scale(1.05);
+}
+
+@media screen and (max-width: 768px){
+    .flex-main {
+        display: flex;
+        flex-direction: column;
+    }    
+}
+
+@media screen and (max-width: 768px) {
+    #center {
+        width: 100%;
+    }    
 }
