changed document name for main page

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -5,6 +5,6 @@
     margin: 0;
 }
 
-.header {
-    font-size: 30px;
+body {
+    background-image: url (https://img.freepik.com/free-vector/abstract-halftone-wallpaper-theme_23-2148585560.jpg);
 }
