--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -134,6 +134,8 @@ a:hover {
     display: flex;
     flex-direction: column;
     margin-right: 10px;
+    padding: 5px;
+    border: 1px solid var(--red);
 }
 
 .links a {
