Added some more text to the homepage and adjusted font

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -92,18 +92,20 @@ a:hover {
     text-align: center;
     width: 50%;
     padding: 15px;
-    height: 500px;
+    height: auto;
 
 }
 
 .about-page h1 {
     padding: 10px;
-    font-size: 20px;
+    font-size: 40px;
+    text-decoration: underline var(--bluetxt);
 }
 
 .about-page p {
     flex-wrap: wrap;
     padding: 10px;
+    font-size: 20px;
 }
 
 .img {
