changed background on games page colors

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -14,7 +14,7 @@
 body {
     height: 100%;
     width: 100%;
-    background-image:url('./images/comic-style-background-flat-design_23-2148793185.jpg');
+    background-image:url('https://www.creativefabrica.com/wp-content/uploads/2022/07/18/Colorful-flat-comic-style-background-Graphics-34383732-1.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
