--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -5,12 +5,12 @@
 
 :root {
     --border: rgba(0, 195, 255, 0.932);
-    --backboard: #0404043d;
-    --text: grey;
+    --text: #ffffff;
+    --backboard: rgba(5, 5, 5, 0.674);
 }
 
 body {
-    background-image: url(https://mcdn.wallpapersafari.com/medium/50/32/x8z2RI.jpg);
+    background-image: url(https://i.redd.it/9szdxbj09wj91.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
