--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -72,7 +72,7 @@ ul {
     text-align: center;
     line-height: 63px;
     background: #333;
-    border-radius: 50%;
+    --border-radius: 50%;
     font-size: 30px;
     color: #666;
     transition: .5s;
