--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-    --border: rgba(0, 195, 255, 0.932);
+    --border: rgb(0, 195, 255);
     --text: #ffffff;
     --backboard: rgba(5, 5, 5, 0.674);
 }
@@ -46,8 +46,16 @@ body {
     color: var(--text);
 }
 
-a:hover {
+#pow a:hover {
     color: rgb(125, 1, 1);
+    box-shadow: 0px 0px 15px rgb(243, 243, 130);
+    border-radius: 5px;
+}
+
+#home a:hover {
+    color: rgb(243, 243, 130);
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px rgb(125, 1, 1);
 }
 
 .flexy-main {
@@ -66,6 +74,7 @@ a:hover {
     padding: 10px;
     margin: 5px;
     border: 2px solid var(--border);
+    border-radius: 5px;
     background-color: var(--backboard);
     width: 200px;
 }
@@ -78,6 +87,7 @@ button {
     background: var(--backboard);
     color: var(--text);
     border: 2px solid var(--border);
+    border-radius: 5px;
     font-size: larger;
     text-decoration: underline var(--border);
 }
@@ -86,6 +96,7 @@ button:hover {
     transform: scale(1.06);
     color: var(--border);
     cursor: pointer;
+    box-shadow: 0px 0px 10px var(--border);
 }
 
 .txt {
@@ -94,6 +105,7 @@ button:hover {
     flex-direction: column;
     font-size: 28px;
     border: 2px solid var(--border);
+    border-radius: 5px;
     padding: 10px;
 
 }
@@ -107,6 +119,7 @@ button:hover {
     width: 100%;
     background-color: var(--backboard);
     border: 2px solid var(--border);
+    border-radius: 5px;
     margin: 5px;
 }
 
