--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6,7 +6,8 @@
 :root {
     --bluetxt: rgb(55, 0, 166);
     --red: rgb(125, 1, 1);
-    --bordercolor: rgb(0, 0, 179);
+    --bordercolor: rgba(55, 0, 166, 1);
+    --text: bisque;
 
 }
 
@@ -19,7 +20,7 @@ header {
     border-radius: 8px;
     padding: 15px;
     margin: auto;
-    color: bisque;
+    color: var(--text);
     font-size: 35px;
     
 }
@@ -36,7 +37,7 @@ body {
 
 body.dark-theme {
     background-color: black;
-    color: bisque;
+    color: var(--text);
 
 }
 span {
@@ -45,7 +46,7 @@ span {
 
 
 .navbar {
-    border: 2px solid bisque;
+    border: 2px solid var(--text);
     justify-content: center;
     margin: 5px;
     padding: 10px;
@@ -78,7 +79,7 @@ a:hover {
 
 #and {
     color: var(--red);
-    border: 2px solid bisque;
+    border: 2px solid var(--text);
     margin: 2px;
     padding: 5px;
     width: 100px;
