--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -7,6 +7,7 @@
     --border: rgb(0, 195, 255);
     --text: #ffffff;
     --backboard: rgba(5, 5, 5, 0.674);
+    --radius: 5px;
 }
 
 body {
@@ -22,11 +23,18 @@ body {
 .Games {
     background-color: var(--backboard);
     text-align: center;
-    font-size: 35px;
+    font-size: 45px;
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     padding: 10px;
     margin: 2px;
+}
+
+.Games h1 {
+    box-shadow: 0px 0px 20px var(--border);
+    color: var(--text);
+    border: 2px solid var(--border);
+    border-radius: var(--radius);
 }
 
 .nav-bar {
@@ -37,9 +45,10 @@ body {
     text-align: center;
     font-size: 25px;
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     padding: 10px;
     margin: 1px;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 .nav-bar a {
@@ -47,15 +56,15 @@ body {
 }
 
 #pow a:hover {
-    color: rgb(125, 1, 1);
+    color: var(--border);
     box-shadow: 0px 0px 15px rgb(243, 243, 130);
-    border-radius: 5px;
+    border-radius: var(--radius);
 }
 
 #home a:hover {
-    color: rgb(243, 243, 130);
-    border-radius: 5px;
-    box-shadow: 0px 0px 15px rgb(125, 1, 1);
+    color: var(--border);
+    border-radius: var(--radius);
+    box-shadow: 0px 0px 15px rgb(243, 243, 130);
 }
 
 .flexy-main {
@@ -63,8 +72,9 @@ body {
     flex-direction: row;
     margin: 5px;
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     height: 100vh;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 .left {
@@ -74,9 +84,10 @@ body {
     padding: 10px;
     margin: 5px;
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     background-color: var(--backboard);
     width: 200px;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 button {
@@ -87,7 +98,7 @@ button {
     background: var(--backboard);
     color: var(--text);
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     font-size: larger;
     text-decoration: underline var(--border);
 }
@@ -105,8 +116,9 @@ button:hover {
     flex-direction: column;
     font-size: 28px;
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     padding: 10px;
+    box-shadow: 0px 0px 20px var(--border)
 
 }
 
@@ -119,22 +131,25 @@ button:hover {
     width: 100%;
     background-color: var(--backboard);
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     margin: 5px;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 .results {
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 #myImg {
     border: 2px solid var(--border);
-    border-radius: 5px;
+    border-radius: var(--radius);
     cursor: pointer;
     transition: 0.3s;
     margin: 5px;
     height: 250px;
+    box-shadow: 0px 0px 20px var(--border)
 }
 
 #myImg:hover {
