--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -127,10 +127,9 @@ button:hover {
 
 .main {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
     width: 100%;
     background-color: var(--backboard);
     border: 2px solid var(--border);
@@ -139,10 +138,33 @@ button:hover {
     box-shadow: 0px 0px 20px var(--border)
 }
 
+.gamepics {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
 .results {
+    margin-top: auto;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 20px var(--border)
+    flex-wrap: wrap;
+    box-shadow: 0px 0px 20px var(--border);
+    width: 100%;
+    height: 50%;
+}
+
+.catch {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    box-shadow: 0px 0px 20px var(--border);
+    width: 100%;
+    height: 50%;
+    font-size: 10px;
+    padding: 5px;
+
 }
 
 #myImg {
