added attributes to my css for the search bar and ul

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header {
-    color: #666;
+    color: #ffff99;
     font-size: 148px;
     text-align: center;
     border: 2px solid var(--border);
