added .iron and .thor to center text

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -115,5 +115,17 @@ ul {
     box-shadow: 0 0 5px #ffee10;
     text-shadow: 0 0 5px #ffee10;
   }
+
+  .iron a {
+    text-align: center;
+    justify-content: center;
+    padding: 11%;
+  }
+
+  .thor a {
+    text-align: center;
+    justify-content: center;
+    padding: 11%;
+  }
   
   
