--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -61,7 +61,7 @@ body {
     box-shadow: 0px 0px 15px rgb(243, 243, 130);
     border-radius: var(--radius);
     border: 2px solid var(--border);
-    
+
 }
 
 #home a:hover {
@@ -118,7 +118,8 @@ button:hover {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    font-size: 28px;
+    font-size: 23px;
+    height: auto;
     border: 2px solid var(--border);
     border-radius: var(--radius);
     padding: 10px;
@@ -131,6 +132,7 @@ button:hover {
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
+    height: auto;
     background-color: var(--backboard);
     border: 2px solid var(--border);
     border-radius: var(--radius);
@@ -146,7 +148,7 @@ button:hover {
 }
 
 .results {
-    margin-top: auto;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -161,9 +163,10 @@ button:hover {
     flex-wrap: wrap;
     box-shadow: 0px 0px 20px var(--border);
     width: 100%;
-    height: 50%;
-    font-size: 10px;
+    height: 100%;
+    font-size: 11px;
     padding: 5px;
+    list-style: none;
 
 }
 
