--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -125,11 +125,15 @@ ul {
   .thor a {
     text-align: center;
     justify-content: center;
-    padding: 11%;
+    padding: 20%;
   }
   
   .kapow_image {
-    height: 55%;
-    width
+    height: 30%;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 10%;
+    border: 2px solid var(--border);
   }
   
