added css for java

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -160,7 +160,7 @@ ul {
 
 .comics ul li {
   height: 20px;
-  width: 5Cuprea10@%;
+  width: 5%;
   margin: auto;
   margin-top: 35%;
   margin-left: 10%;
