--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -159,18 +159,22 @@ ul {
 }
 
 .comics ul li {
-  height: 20px;
+  display: flex;
+  height: 500px;
   width: 5%;
   margin: auto;
-  margin-top: 35%;
-  margin-left: 10%;
-  margin-right: 5%;
-  flex-direction: row;
-  justify-content: space-around;
+  margin-top: 45%;
+  margin-left: 25%;
+}
+
+.spider {
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 130%;
 }
 
   .credits p {
     text-align: center;
-    margin-top: 35%;
+    margin-top: 210%;
   }
   
