--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -134,6 +134,37 @@ a:hover {
     transform: scale(1.05);
 }
 
+.form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 5px solid var(--bordercolor);
+    border-radius: 5px;
+    width: 45%;
+    margin: auto;
+    padding: 10px;
+}
+
+#blog-form {
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    justify-content: center;
+    margin: auto;
+    border: 2px solid var(--red);
+    padding: 5px;
+}
+
+#welp {
+    margin: auto;
+    color: var(--bluetxt);
+}
+
+#welp:hover {
+    color: var(--red);
+    box-shadow: 0px 0px 10px var(--linkHover);
+}
+
 .foot {
     flex-direction: row;
     margin-top: 100px;
