changed the kapow pic to fit better

--- a/assets/css/comics.css
+++ b/assets/css/comics.css
@@ -140,7 +140,7 @@ ul {
   }
   
   .kapow_image {
-    height: 30%;
+    height: 450px;
     width: 70%;
     margin-left: 15%;
     margin-right: 15%;
